# gl-clock

./: .gitattributes  Cargo.toml  build.rs
src/: main.rs  rendering.rs
src/shaders/: clockFace.frag  clockFace.vert  clockHand.frag  clockHand.vert  clockTick.frag  clockTick.vert
